[gd_scene load_steps=30 format=2]

[ext_resource path="res://Sprites/Enemies/PlayerDetection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes and Hurtboxes/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Enemies/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Enemies/Armed Bandit.png" type="Texture" id=6]
[ext_resource path="res://World/ArmedBandit.gd" type="Script" id=7]
[ext_resource path="res://Hitboxes and Hurtboxes/White.shader" type="Shader" id=8]

[sub_resource type="ShaderMaterial" id=19]
shader = ExtResource( 8 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.8778
height = 6.61919

[sub_resource type="CapsuleShape2D" id=11]
radius = 7.34996
height = 8.01484

[sub_resource type="CapsuleShape2D" id=12]
radius = 1.90892
height = 6.27939

[sub_resource type="CircleShape2D" id=13]
radius = 89.7629

[sub_resource type="Animation" id=2]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "RunLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 9 ]
}

[sub_resource type="Animation" id=5]
resource_name = "RunRight"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace1D" id=8]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = 0.0
blend_point_1/node = SubResource( 7 )
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "RunRight"

[sub_resource type="AnimationNodeBlendSpace1D" id=16]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = 0.0
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachine" id=9]
states/Idle/node = SubResource( 8 )
states/Idle/position = Vector2( 506, 86 )
states/Run/node = SubResource( 16 )
states/Run/position = Vector2( 672, 86 )
transitions = [ "Idle", "Run", SubResource( 17 ), "Run", "Idle", SubResource( 18 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="Animation" id=20]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=21]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="ArmedBandit" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 19 )
texture = ExtResource( 6 )
hframes = 12
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8.40896 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 2147483656

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 11 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 8.41846 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="PlayerDetection" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 13 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 3

[node name="WanderController" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleLeft = SubResource( 2 )
anims/IdleRight = SubResource( 3 )
anims/RunLeft = SubResource( 4 )
anims/RunRight = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )
parameters/Idle/blend_position = 0
parameters/Run/blend_position = 0.0818933

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 20 )
anims/Stop = SubResource( 21 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="SoftCollision"]

[editable path="PlayerDetection"]
